--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "tailwind-scrollbar-hide": "^1.1.6",
